--- a/InitialAnalysis.ipynb
+++ b/InitialAnalysis.ipynb
@@ -470,6 +470,7 @@
     }
    ],
    "source": [
+    "#creating the h5 files to be loaded by keras. \n",
     "Cooking.cook(full_path_raw_folders, COOKED_DATA_DIR, train_eval_test_split)"
    ]
   },
