--- a/ModelTraining2.ipynb
+++ b/ModelTraining2.ipynb
@@ -188,6 +188,7 @@
     }
    ],
    "source": [
+    "#creating the keras model. \n",
     "image_input_shape = sample_batch_train_data[0].shape[1:]\n",
     "state_input_shape = sample_batch_train_data[1].shape[1:]\n",
     "activation = 'relu'\n",
